--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <h1>Currency Exchange</h1>
   </div>
   <div class="container">
-    <form>
+    <form if="formOne">
       <div class="form-group">
         <div class="row">
           <div class="col-sm-3">
@@ -34,7 +34,7 @@
       </div>
     </form>
     <div id="display">
-      <p>$<span id="usdNumber"> USD</span>  is <span id="exchangeNumber"></span></p>
+      
     </div>
   </div>
 </body>
