--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,7 @@
         </div>
       </div>
     </form>
-    <div id="display">
-      
-    </div>
+    <div id="display"></div>
   </div>
 </body>
 </html>
